# shuttle-xata-backend

./: Cargo.toml  README.md
src/: main.rs
src/account/: handler.rs  mod.rs  route.rs  schema.rs
src/card/: handler.rs  route.rs  schema.rs
src/user/: handler.rs  route.rs  schema.rs
