[package]
name = "rest-api-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"
tokio = "1.28.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.35"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio"]}
uuid = { version = "1.8.0", features = ["v4", "serde"]}
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
