[package]
name = "rest-api-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["multipart"]}
rand = "0.8.5"
axum-extra = { version = "0.9.3", features = ["cookie-private"]}
bcrypt = "0.15.1"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"
tokio = "1.28.2"
time = "0.3.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.35"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio", "chrono", "postgres", "tls-rustls"]}
uuid = { version = "1.8.0", features = ["v4", "serde"]}
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
tower-http = { version = "0.5.2", features = ["cors"] }
